[gd_scene load_steps=6 format=2]

[ext_resource path="res://Maps/Map.gd" type="Script" id=1]
[ext_resource path="res://Tiles/TileSet.tres" type="TileSet" id=2]
[ext_resource path="res://Towers/Range/StartTower/StartTower.tscn" type="PackedScene" id=3]
[ext_resource path="res://Towers/Receiver/FinishTower/FinishTower.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=5]

[node name="Stage2" type="Node2D" index="0"]

script = ExtResource( 1 )
nextlevel = null

[node name="TileMap" type="TileMap" parent="." index="0"]

z_index = -10
mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = true
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 4, 0, 1, 4, 1, 2, 4, 1, 3, 4, 1, 4, 4, 1, 5, 4, 1, 6, 4, 1, 7, 4, 1, 8, 4, 1, 9, 4, 1, 10, 4, 1, 11, 4, 1, 12, 4, 1, 13, 4, 1, 14, 4, 1, 15, 4, 1, 16, 4, 1, 17, 4, 1, 18, 4, 1, 19, 4, 2, 65536, 4, 65537, 65537, 4, 131073, 65538, 4, 131073, 65539, 4, 131073, 65540, 4, 131073, 65541, 4, 131073, 65542, 4, 131073, 65543, 4, 131073, 65544, 4, 131073, 65545, 4, 131073, 65546, 4, 131073, 65547, 4, 131073, 65548, 4, 131073, 65549, 4, 131073, 65550, 4, 131073, 65551, 4, 131073, 65552, 4, 131073, 65553, 4, 131073, 65554, 4, 131073, 65555, 4, 131074, 131072, 4, 65539, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 131083, 2, 0, 131084, 2, 0, 131085, 2, 0, 131086, 2, 0, 131087, 2, 0, 131088, 2, 0, 131089, 2, 0, 131090, 2, 0, 131091, 2, 0, 196608, 4, 65537, 196609, 4, 3, 196610, 4, 3, 196611, 4, 3, 196612, 4, 3, 196613, 4, 3, 196614, 4, 3, 196615, 4, 3, 196616, 4, 3, 196617, 4, 3, 196618, 4, 3, 196619, 4, 3, 196620, 4, 3, 196621, 4, 3, 196622, 4, 3, 196623, 4, 3, 196624, 4, 3, 196625, 4, 3, 196626, 4, 3, 196627, 4, 65537, 262144, 3, 4, 262145, 3, 1, 262146, 3, 1, 262147, 3, 1, 262148, 3, 1, 262149, 3, 1, 262150, 3, 1, 262151, 3, 1, 262152, 3, 1, 262153, 3, 1, 262154, 3, 1, 262155, 3, 1, 262156, 3, 1, 262157, 3, 1, 262158, 3, 1, 262159, 3, 1, 262160, 3, 1, 262161, 3, 1, 262162, 3, 1, 262163, 3, 5, 327680, 4, 65537, 327681, 4, 3, 327682, 4, 3, 327683, 4, 3, 327684, 4, 3, 327685, 4, 3, 327686, 4, 3, 327687, 4, 3, 327688, 4, 3, 327689, 4, 3, 327690, 4, 3, 327691, 4, 3, 327692, 4, 3, 327693, 4, 3, 327694, 4, 3, 327695, 4, 3, 327696, 4, 3, 327697, 4, 3, 327698, 4, 3, 327699, 4, 65537, 393216, 3, 4, 393217, 3, 1, 393218, 3, 1, 393219, 3, 65537, 393220, 3, 1, 393221, 3, 1, 393222, 3, 1, 393223, 3, 1, 393224, 3, 1, 393225, 3, 1, 393226, 3, 1, 393227, 3, 1, 393228, 3, 1, 393229, 3, 1, 393230, 3, 1, 393231, 3, 1, 393232, 3, 1, 393233, 3, 1, 393234, 3, 1, 393235, 3, 5, 458752, 4, 65537, 458753, 4, 3, 458754, 4, 65537, 458755, 3, 65536, 458756, 4, 65537, 458757, 4, 3, 458758, 4, 3, 458759, 4, 3, 458760, 4, 3, 458761, 4, 3, 458762, 4, 3, 458763, 4, 3, 458764, 4, 3, 458765, 4, 3, 458766, 4, 3, 458767, 4, 3, 458768, 4, 3, 458769, 4, 3, 458770, 4, 3, 458771, 4, 65537, 524288, 4, 65539, 524289, 3, 0, 524290, 3, 1, 524291, 3, 131073, 524292, 3, 1, 524293, 3, 1, 524294, 3, 1, 524295, 3, 65537, 524296, 3, 1, 524297, 3, 1, 524298, 3, 1, 524299, 3, 1, 524300, 3, 1, 524301, 3, 1, 524302, 3, 1, 524303, 3, 1, 524304, 3, 1, 524305, 3, 1, 524306, 3, 1, 524307, 3, 5, 589824, 4, 65539, 589825, 3, 65536, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 3, 65536, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 2, 0, 589841, 2, 0, 589842, 2, 0, 589843, 2, 0, 655360, 4, 65539, 655361, 3, 65536, 655362, 1, 0, 655363, 4, 0, 655364, 4, 1, 655365, 4, 2, 655366, 1, 0, 655367, 3, 65536, 655368, 1, 0, 655369, 4, 0, 655370, 4, 1, 655371, 4, 1, 655372, 4, 1, 655373, 4, 1, 655374, 4, 1, 655375, 4, 2, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 720896, 4, 65539, 720897, 3, 131077, 720898, 1, 0, 720899, 4, 65536, 720900, 4, 65537, 720901, 4, 65538, 720902, 1, 0, 720903, 3, 131077, 720904, 1, 0, 720905, 4, 65536, 720906, 4, 65537, 720907, 4, 65537, 720908, 4, 65537, 720909, 4, 65537, 720910, 4, 65537, 720911, 4, 65538, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 786432, 4, 65537, 786433, 4, 1, 786434, 4, 1, 786435, 4, 65541, 786436, 4, 65537, 786437, 4, 65540, 786438, 4, 1, 786439, 4, 1, 786440, 4, 1, 786441, 4, 65541, 786442, 4, 65537, 786443, 4, 65537, 786444, 4, 65537, 786445, 4, 65537, 786446, 4, 65537, 786447, 4, 65538, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 851968, 4, 65536, 851969, 4, 65537, 851970, 4, 65537, 851971, 4, 65537, 851972, 4, 65537, 851973, 4, 65537, 851974, 4, 65537, 851975, 4, 65537, 851976, 4, 65537, 851977, 4, 65537, 851978, 4, 65537, 851979, 4, 65537, 851980, 4, 65537, 851981, 4, 65537, 851982, 4, 65537, 851983, 4, 65538, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 917504, 4, 131072, 917505, 4, 131073, 917506, 4, 131073, 917507, 4, 131073, 917508, 4, 131073, 917509, 4, 131073, 917510, 4, 131073, 917511, 4, 131073, 917512, 4, 131073, 917513, 4, 131073, 917514, 4, 131073, 917515, 4, 131073, 917516, 4, 131073, 917517, 4, 131073, 917518, 4, 131073, 917519, 4, 131074, 917520, 2, 0, 917521, 2, 0, 917522, 2, 0, 917523, 2, 0 )
_sections_unfolded = [ "Cell", "Z Index" ]

[node name="StartTower" parent="TileMap" index="0" instance=ExtResource( 3 )]

position = Vector2( 528, 368 )

[node name="FinishTower" parent="TileMap" index="1" instance=ExtResource( 4 )]

position = Vector2( 368, 48 )

[node name="UI" parent="." index="1" instance=ExtResource( 5 )]

[connection signal="progress" from="." to="UI" method="_on_progress"]

[connection signal="victory" from="." to="UI" method="_on_victory"]

[connection signal="victory" from="." to="TileMap/StartTower" method="_on_victory"]

[connection signal="force_update_drawing" from="TileMap/StartTower" to="." method="_on_StartTower_force_update_drawing"]

[connection signal="start_download" from="TileMap/FinishTower" to="." method="_on_FinishTower_start_download"]

[connection signal="stop_download" from="TileMap/FinishTower" to="." method="_on_FinishTower_stop_download"]

[connection signal="nextlevel" from="UI" to="." method="_on_UI_nextlevel"]

[connection signal="quit" from="UI" to="." method="_on_UI_quit"]

[connection signal="tower_selected" from="UI" to="." method="_on_UI_tower_selected"]


